--- a/project/index.html
+++ b/project/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <!-- Progress Bar -->
+<!-- Progress Bar -->
         <div class="progress-container">
             <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 33.33%" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100"></div>
@@ -186,7 +186,7 @@
                     
                     <div class="mb-3">
                         <label class="form-label">Add Image(s)</label>
-                        <div class="image-upload-area">
+                        <div class="image-upload-area" id="imageArea">
                             <i class="fas fa-cloud-upload-alt upload-icon"></i>
                             <p class="upload-text">Drag & drop images here or click to browse</p>
                             <input type="file" class="d-none" id="imageUpload" multiple accept="image/*">
